[metadata]
name = syncsign
version = 0.1.0
author = Roger
author_email = r@sync-sign.com
description = SyncSign SDK package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/syncsign/syncsign-python-sdk
project_urls =
    Bug Tracker = https://github.com/syncsign/syncsign-python-sdk/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    requests~=2.24
    jsonpickle~=1.4, >= 1.4.1
    python-dateutil~=2.8.1
    cachecontrol~=0.12.6

[options.packages.find]
where = src
